[metadata]
name = cloudmesh
version = 0.1
summary = Introduction to cloud computing
description-file =
    README.rst
author = Cloudmesh Team
author-email = laszewski@gmail.com
home-page = https://github.com/cloudmesh/introduction_to_cloud_computing
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux :: MacOS :: MacOS X
    Programming Language :: Python :: 2.7
    Topic :: Database
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering
    Topic :: System :: Clustering
    Topic :: System :: Distributed Computing
    Topic :: System :: Boot
    Topic :: System :: Systems Administration
    Framework :: Flask
    Environment :: OpenStack


[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

